[gd_scene load_steps=25 format=3 uid="uid://bbh0dq2qflaj1"]

[ext_resource type="Script" path="res://Enemy/enemy.gd" id="1_l61ti"]
[ext_resource type="Texture2D" uid="uid://dpk8g8mqx1ccb" path="res://Textures/Enemy/Pawn_Red.png" id="2_tehgd"]
[ext_resource type="Texture2D" uid="uid://bggjwu160jsvv" path="res://Textures/Player/Dynamite/Explosions.png" id="3_jhicv"]
[ext_resource type="PackedScene" uid="uid://boojmdk820qcx" path="res://Utility/hurt_box.tscn" id="4_6xxb4"]
[ext_resource type="PackedScene" uid="uid://bir4toomyp0m2" path="res://Utility/hit_box.tscn" id="5_d7ss3"]
[ext_resource type="AudioStream" uid="uid://ckd60yybhbbmf" path="res://Audio/SoundEffect/medium-explosion-40472.mp3" id="6_xlcdl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gkcm1"]
atlas = ExtResource("2_tehgd")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_iamdv"]
atlas = ExtResource("2_tehgd")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_8a2rb"]
atlas = ExtResource("2_tehgd")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_do6km"]
atlas = ExtResource("2_tehgd")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfx1m"]
atlas = ExtResource("2_tehgd")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vrvy"]
atlas = ExtResource("2_tehgd")
region = Rect2(960, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nfl1"]
atlas = ExtResource("3_jhicv")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_yw1vo"]
atlas = ExtResource("3_jhicv")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_pyir5"]
atlas = ExtResource("3_jhicv")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ar6ob"]
atlas = ExtResource("3_jhicv")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjr88"]
atlas = ExtResource("3_jhicv")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5fiw"]
atlas = ExtResource("3_jhicv")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_747h2"]
atlas = ExtResource("3_jhicv")
region = Rect2(1152, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgc85"]
atlas = ExtResource("3_jhicv")
region = Rect2(1344, 0, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_i6kq7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkcm1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iamdv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8a2rb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_do6km")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfx1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vrvy")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nfl1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yw1vo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pyir5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ar6ob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjr88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5fiw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_747h2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgc85")
}],
"loop": true,
"name": &"explosion",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_lnfcv"]
radius = 17.0294

[sub_resource type="CircleShape2D" id="CircleShape2D_j3bct"]
radius = 19.105

[sub_resource type="CircleShape2D" id="CircleShape2D_almc2"]
radius = 20.0

[node name="Enemy_pawn_strong" type="CharacterBody2D"]
collision_layer = 5
collision_mask = 5
motion_mode = 1
script = ExtResource("1_l61ti")
movement_speed = 35.0
hp = 5
enemy_damage = 15

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_i6kq7")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_lnfcv")

[node name="HurtBox" parent="." instance=ExtResource("4_6xxb4")]
collision_layer = 4
collision_mask = 2
HurtBoxType = 1

[node name="CollisionShape2D" parent="HurtBox" index="0"]
visible = false
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_j3bct")

[node name="HitBox" parent="." instance=ExtResource("5_d7ss3")]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(-1, -1)
shape = SubResource("CircleShape2D_almc2")

[node name="snd_explosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_xlcdl")
volume_db = -30.0
pitch_scale = 2.0

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]

[editable path="HurtBox"]
[editable path="HitBox"]
